fix width on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1561,7 +1561,7 @@ a.newer-posts:hover {
   }
   .click-image,  .click-images {
     margin-left: -40px;
-    margin-right: -40px;
+    margin-right: -30px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 0px 3px;
   }
 }
